# collect_into_rc_slice

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  test.yml
src/: arc.rs  arc_slice.rs  arc_str.rs  lib.rs  rc.rs  rc_slice.rs  rc_str.rs
