[package]
name = "collect_into_rc_slice"
version = "1.0.0"
authors = ["MarkosTh09"]
repository = "https://github.com/Markos-Th09/collect_into_rc_slice"
license = "MIT"
readme = "README.md"
description = "A crate that let's you collect an `Iterator<Item=T>` into an `Rc<[T]>` or `Arc<[T]>` without needing to make 2 heap allocations."
edition = "2021"
